--- a/package.json
+++ b/package.json
@@ -17,5 +17,36 @@
   "bugs": {
     "url": "https://github.com/ev-dev/example-js/issues"
   },
-  "homepage": "https://github.com/ev-dev/example-js#readme"
+  "homepage": "https://github.com/ev-dev/example-js#readme",
+  "dependencies": {
+    "axios": "^0.16.2",
+    "babel-preset-stage-2": "^6.24.1",
+    "body-parser": "^1.17.2",
+    "bulma": "^0.5.0",
+    "express": "^4.15.3",
+    "lodash": "^4.17.4",
+    "pg": "^7.0.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "sequelize": "^4.4.2"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.0.2",
+    "nodemon": "^1.11.0",
+    "volleyball": "^1.4.1",
+    "webpack": "^3.4.1",
+    "webpack-livereload-plugin": "^0.11.0"
+  }
 }
