--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack -w && nodemon server --watch index.js --watch package.json",
+    "build-watch": "webpack -w",
+    "dev": "webpack -w && nodemon index.js --watch server --watch package.json",
     "start": "node index.js",
     "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,6 +30,7 @@
     "pg": "^7.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-highlight": "^0.10.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
