front end flow initialized switching to backend

--- a/package.json
+++ b/package.json
@@ -24,19 +24,26 @@
     "axios": "^0.16.2",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.2",
+    "brace": "^0.10.0",
     "bulma": "^0.5.0",
+    "draft-js": "^0.10.1",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
     "pg": "^7.0.2",
     "react": "^15.6.1",
+    "react-ace": "^5.1.2",
+    "react-ace-editor": "0.0.2",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^15.6.1",
     "react-highlight": "^0.10.0",
+    "react-quill": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.4.2"
+    "sequelize": "^4.4.2",
+    "stackexchange": "^0.4.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -48,6 +55,7 @@
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.2",
     "nodemon": "^1.11.0",
+    "redux-devtools-extension": "^2.13.2",
     "volleyball": "^1.4.1",
     "webpack": "^3.4.1",
     "webpack-livereload-plugin": "^0.11.0"
