--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.4.2",
-    "stackexchange": "^0.4.0"
+    "stackexchange": "^0.4.0",
+    "stackexchange-node": "^1.0.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
