--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bulma": "^0.5.0",
     "draft-js": "^0.10.1",
     "express": "^4.15.3",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "pg": "^7.0.2",
     "react": "^15.6.1",
