--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.17.2",
     "brace": "^0.10.0",
     "bulma": "^0.5.0",
+    "cheerio": "^1.0.0-rc.2",
     "draft-js": "^0.10.1",
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
@@ -44,6 +45,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
     "sequelize": "^4.4.2",
     "stackexchange": "^0.4.0",
     "stackexchange-node": "^1.0.1"
