--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "request": "^2.81.0",
-    "request-promise-native": "^1.0.4",
     "sequelize": "^4.4.2",
     "stackexchange": "^0.4.0",
     "stackexchange-node": "^1.0.1"
@@ -59,6 +57,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "chalk": "^2.0.1",
     "cross-env": "^5.0.2",
     "nodemon": "^1.11.0",
     "redux-devtools-extension": "^2.13.2",
