--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "nodemon tests/testServer.js --watch tests",
     "start": "npm run build && npm run serve",
     "build": "cross-env NODE_ENV=production webpack",
-    "serve": "cross-env NODE_ENV=production node server/index.js"
+    "serve": "cross-env NODE_ENV=production node server/index.js",
+    "seed": "nodemon server/db/seed.js --exec babel-node"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "faker": "^4.1.0",
     "graphql": "^0.11.7",
     "graphql-subscriptions": "^0.5.4",
     "graphql-tag": "^2.5.0",
@@ -46,7 +48,8 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-react-app": "^3.0.3",
+    "babel-preset-react-app": "^3.1.0",
+    "babel-preset-stage-2": "^6.24.1",
     "casual": "^1.5.17",
     "chalk": "^2.2.0",
     "cross-env": "^5.1.0",
