--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "scripts": {
     "dev": "npm run build-dev & npm run serve-dev",
     "build-dev": "cross-env NODE_ENV=development webpack -w",
-    "serve-dev": "nodemon ./server/index.js --watch server --exec babel-node",
+    "serve-dev": "nodemon -r @std/esm ./server/index.js --watch server",
     "test-build": "cross-env NODE_ENV=development webpack --bail --progress -d",
     "test": "nodemon tests/testServer.js --watch tests",
     "start": "npm run build && npm run serve",
     "build": "cross-env NODE_ENV=production webpack",
     "serve": "cross-env NODE_ENV=production node server/index.js",
-    "seed": "nodemon server/db/seed.js --exec babel-node"
+    "seed": "node -r @std/esm server/db/betterSeed.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "devtool",
+    "documentation",
+    "graphql"
+  ],
+  "author": "ev-dv",
   "license": "ISC",
+  "@std/esm": {
+    "esm": "js",
+    "cjs": true
+  },
   "dependencies": {
+    "@std/esm": "^0.12.5",
     "apollo-client": "^2.0.1",
     "apollo-client-preset": "^1.0.1",
     "apollo-server-express": "^1.2.0",
@@ -26,10 +35,12 @@
     "express": "^4.16.2",
     "faker": "^4.1.0",
     "graphql": "^0.11.7",
+    "graphql-schema-modules": "0.0.2",
     "graphql-subscriptions": "^0.5.4",
     "graphql-tag": "^2.5.0",
-    "graphql-tools": "^2.6.1",
-    "pg": "^7.3.0",
+    "graphql-tools": "^2.7.0",
+    "merge-graphql-schemas": "^1.3.0",
+    "pg": "^7.4.0",
     "pg-native": "^2.2.0",
     "react": "^16.0.0",
     "react-apollo": "^2.0.0",
@@ -40,19 +51,19 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.20.1",
+    "sequelize": "^4.20.3",
     "subscriptions-transport-ws": "^0.9.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.5",
+    "autoprefixer": "^7.1.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-react-app": "^3.1.0",
     "babel-preset-stage-2": "^6.24.1",
     "casual": "^1.5.17",
-    "chalk": "^2.2.0",
-    "cross-env": "^5.1.0",
+    "chalk": "^2.3.0",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
