--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "npm run build && npm run serve",
     "build": "cross-env NODE_ENV=production webpack",
     "serve": "cross-env NODE_ENV=production node server/index.js",
-    "seed": "node -r @std/esm server/db/betterSeed.js"
+    "seed": "node -r @std/esm server/db/seed.js"
   },
   "keywords": [
     "devtool",
