--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "license": "ISC",
   "@std/esm": {
     "esm": "js",
-    "cjs": true
+    "cjs": true,
+    "warnings": false
   },
   "dependencies": {
     "@std/esm": "^0.12.5",
+    "@types/sequelize": "^4.0.78",
     "apollo-client": "^2.0.1",
     "apollo-client-preset": "^1.0.1",
     "apollo-server-express": "^1.2.0",
@@ -38,7 +40,7 @@
     "graphql-schema-modules": "0.0.2",
     "graphql-subscriptions": "^0.5.4",
     "graphql-tag": "^2.5.0",
-    "graphql-tools": "^2.7.0",
+    "graphql-tools": "^2.7.2",
     "merge-graphql-schemas": "^1.3.0",
     "pg": "^7.4.0",
     "pg-native": "^2.2.0",
@@ -51,7 +53,8 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.20.3",
+    "sequelize": "^4.22.5",
+    "sequelize-hierarchy": "^1.3.1",
     "subscriptions-transport-ws": "^0.9.1"
   },
   "devDependencies": {
@@ -66,7 +69,7 @@
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "lodash": "^4.17.4",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.6.0",
     "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
