--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "npm run build-dev & npm run serve-dev",
     "build-dev": "cross-env NODE_ENV=development webpack -w",
     "serve-dev": "nodemon -r @std/esm ./server/index.js --watch server",
+    "debug": "babel-node ./server/index.js",
     "test-build": "cross-env NODE_ENV=development webpack --bail --progress -d",
     "test": "nodemon tests/testServer.js --watch tests",
     "start": "npm run build && npm run serve",
@@ -27,21 +28,21 @@
     "warnings": false
   },
   "dependencies": {
-    "@std/esm": "^0.12.5",
+    "@std/esm": "^0.13.0",
     "@types/sequelize": "^4.0.78",
+    "apollo-cache-inmemory": "^1.0.0",
     "apollo-client": "^2.0.1",
     "apollo-client-preset": "^1.0.1",
+    "apollo-link-http": "^1.1.0",
     "apollo-server-express": "^1.2.0",
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "faker": "^4.1.0",
     "graphql": "^0.11.7",
-    "graphql-schema-modules": "0.0.2",
     "graphql-subscriptions": "^0.5.4",
     "graphql-tag": "^2.5.0",
     "graphql-tools": "^2.7.2",
-    "merge-graphql-schemas": "^1.3.0",
     "pg": "^7.4.0",
     "pg-native": "^2.2.0",
     "react": "^16.0.0",
@@ -54,7 +55,6 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.22.5",
-    "sequelize-hierarchy": "^1.3.1",
     "subscriptions-transport-ws": "^0.9.1"
   },
   "devDependencies": {
@@ -64,7 +64,6 @@
     "babel-loader": "^7.1.2",
     "babel-preset-react-app": "^3.1.0",
     "babel-preset-stage-2": "^6.24.1",
-    "casual": "^1.5.17",
     "chalk": "^2.3.0",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
