--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
   },
   "dependencies": {
     "@std/esm": "^0.13.0",
-    "@types/sequelize": "^4.0.78",
     "apollo-cache-inmemory": "^1.0.0",
     "apollo-client": "^2.0.1",
     "apollo-client-preset": "^1.0.1",
+    "apollo-link": "^1.0.0",
     "apollo-link-http": "^1.1.0",
     "apollo-server-express": "^1.2.0",
     "axios": "^0.17.0",
+    "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "faker": "^4.1.0",
@@ -54,6 +55,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "sequelize": "^4.22.5",
     "subscriptions-transport-ws": "^0.9.1"
   },
   "devDependencies": {
