--- a/package.json
+++ b/package.json
@@ -22,12 +22,8 @@
   ],
   "author": "ev-dv",
   "license": "ISC",
-  "@std/esm": {
-    "esm": "js",
-    "cjs": true,
-    "warnings": false
-  },
   "dependencies": {
+    "@std/esm": "^0.12.5",
     "apollo-cache-inmemory": "^1.0.0",
     "apollo-client": "^2.0.1",
     "apollo-client-preset": "^1.0.1",
